test/typecheck/errors/assign-func-no-ret.boa
o: output sum of int;

f := function(i: int) {
    o << i;
};


g := f(5);
